--- a/pertemuan_2/src/main/resources/application.properties
+++ b/pertemuan_2/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 spring.devtools.livereload.enabled=true
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/v3/api-docs
